Fix deletable tag icon alignment in Safari 10, fixes #66

--- a/src/button/index.css
+++ b/src/button/index.css
@@ -253,6 +253,11 @@ a.spectrum-ActionButton {
   margin: 0;
 
   border: none;
+
+  > .spectrum-Icon {
+    /* @safari10 Workaround for https://bugs.webkit.org/show_bug.cgi?id=169700 */
+    margin: 0 auto;
+  }
 }
 
 .spectrum-ClearButton--small {
